--- a/src/app/card-container/card-container.component.scss
+++ b/src/app/card-container/card-container.component.scss
@@ -3,11 +3,13 @@
 
 section {
   padding: $spacing-sm;
-  width: 100%;
+  max-width: 100%;
 }
 ul {
   @include flex(row, space-evenly, start);
-  width: 100%;
+  max-width: 100%;
+  overflow-x: auto;
+  @include scrollbar();
 }
 
 h2 {
