--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @import "./styles/global/variables";
 @import "./styles/global/mixins";
 
@@ -18,6 +17,7 @@
 
 body {
   width: 100%;
+  max-width: 100vw;
   min-height: 100svh;
   overflow-x: hidden;
   background-color: $background-dark-1;
